# rtklawnmower

./: .gitignore  .gitmodules  README.md  arduino.ino  gnss-base.txt  gnss-rover.txt
arduino_rtklm/: arduino_rtklm.ino
catkin_ws/: .gitignore
catkin_ws/src/rtklm_arduino/: CMakeLists.txt  package.xml
catkin_ws/src/rtklm_arduino/launch/: arduino.launch
catkin_ws/src/rtklm_arduino/src/: rtklm_arduino_node.cpp
catkin_ws/src/rtklm_bringup/: CMakeLists.txt  package.xml
catkin_ws/src/rtklm_bringup/config/: control.yaml  ekf_localization.yaml
catkin_ws/src/rtklm_bringup/launch/: arduino.launch  bringup.launch  control.launch  gps.launch  i2c.launch  imu.launch  localization.launch  websocketserver.launch
catkin_ws/src/rtklm_control/: CMakeLists.txt  package.xml
catkin_ws/src/rtklm_control/config/: control.yaml  rtklm_control.yaml
catkin_ws/src/rtklm_control/launch/: control.launch  rtklm_controller.launch
catkin_ws/src/rtklm_description/: CMakeLists.txt  package.xml
catkin_ws/src/rtklm_description/launch/: description.launch  rtklm.rviz  rtklm_rviz.launch
catkin_ws/src/rtklm_description/models/: chassis.stl  wheel.stl
catkin_ws/src/rtklm_description/urdf/: casterwheel.xacro  chassis.xacro  control.yaml  diffdrive_control.yaml  gps.xacro  imu.xacro  main.xacro  model.urdf  wheel.xacro
catkin_ws/src/rtklm_gazebo/: CMakeLists.txt  package.xml
catkin_ws/src/rtklm_gazebo/launch/: rtklawnmower.launch  rtklm_gazebo.launch
catkin_ws/src/rtklm_hardware/: CMakeLists.txt  package.xml  rtklm_hw_plugin.xml
catkin_ws/src/rtklm_hardware/include/: rtklm_hw.hpp
catkin_ws/src/rtklm_hardware/launch/: hardware.launch
catkin_ws/src/rtklm_hardware/src/: rtklm_hardware.cpp  rtklm_hardware_node.cpp
catkin_ws/src/rtklm_i2c/: CMakeLists.txt  package.xml  setup.py
catkin_ws/src/rtklm_i2c/launch/: i2c.launch  imu_calibration.launch
catkin_ws/src/rtklm_i2c/scripts/: imu_calibration.py  rtklm_i2c_node.py
catkin_ws/src/rtklm_i2c/src/rtklm_i2c/: BNO055.py
catkin_ws/src/rtklm_localization/: CMakeLists.txt  package.xml
catkin_ws/src/rtklm_localization/config/: ardusimple.yaml  ekf_map.yaml  ekf_odom.yaml  ekf_se_map.yaml  (+2 more)
catkin_ws/src/rtklm_navigation/: CMakeLists.txt  package.xml
esp32_rtklm/src/: main.cpp
service/: pigpiod.service  str2str.service
(+8 files in other folders)
